fix(payments): map weekly frequency from package credit tokens